Fix subnav z-index

--- a/app/sass/_navigation.scss
+++ b/app/sass/_navigation.scss
@@ -70,7 +70,7 @@
 #subNavigation {
 	display: none;
 	position: absolute;
-	z-index: 4;
+	z-index: 999;
     background: $ehgreen;
     width: 100%;
     padding: 45px 0px;
