--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8803,7 +8803,7 @@ body.page-1 #MainBanner .container {
 #subNavigation {
   display: none;
   position: absolute;
-  z-index: 4;
+  z-index: 999;
   background: #8BB220;
   width: 100%;
   padding: 45px 0px;
